src/test/fun-test/semantic/AssignmentStrictConversion5.java.err
Semantic error: type mismatch - expected INT, got DOUBLE, line 6, pos 15
