src/test/fun-test/semantic/AssignmentStrictConversion5.java
class Main {
    void main() {
        // "сужающее" преобразование, недопустимо
        double foo;
        int bar;
        bar = foo;
    }
}